Add social metadata to Style Guide

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -22,6 +22,16 @@
     <script defer src="../js/toggle-eyecatch.js"></script>
     <script defer src="../js/toggle-home.js"></script>
     <script defer src="../js/toggle-outline.js"></script>
+
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@hail2u_" name="twitter:site">
+    <meta content="https://hail2u.net/about/style-guide/" property="og:url">
+    <meta content="About - Style Guide" property="og:title">
+    <meta content="Hail2u.netで使われているマークアップやスタイルの解説兼プレビューのページです" property="og:description">
+    <meta content="Hail2u.net" property="og:site_name">
+    <meta content="https://hail2u.net/images/about/how-i-markup-and-style-this-website.png" property="og:image">
+    <meta content="website" property="og:type">
+    <meta content="ja_JP" property="og:locale">
   </head>
 
   <body>
