--- a/src/css/test.html
+++ b/src/css/test.html
@@ -828,6 +828,8 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
     <footer class="global-footer" role="contentinfo">
       <p id="author" class="byline">Made by <a href="https://kyonagashima.com/" rel="author">Kyo Nagashima</a></p>
+
+      <p class="footlinks"><a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a> • <a href="/feed" rel="alternate">RSS</a></p>
     </footer>
   </body>
 </html>
