Remove Bordered widget

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -108,7 +108,6 @@
           </li>
           <li>ウィジェット
             <ol>
-              <li><a href="#bordered-image">枠線付き画像</a></li>
               <li><a href="#drop-image">画像の飛び出し</a></li>
               <li><a href="#fill-block">幅いっぱい</a></li>
               <li><a href="#flat-list">フラット・リスト</a></li>
@@ -253,7 +252,7 @@
         <p>ロゴとほぼ同じ画像を正方形にしたSVGフォーマットの画像から生成されています。PNGフォーマットへ変換したものや、更にそのPNGフォーマットの画像をアイコン形式にまとめたものがブラウザーによって適宜使われます。</p>
 
         <figure>
-          <img class="bordered" alt="Uppercase H" height="128" src="../img/favicon-large.svg" width="128">
+          <img alt="Uppercase H" height="128" src="../img/favicon-large.svg" width="128">
         </figure>
       </section>
 
@@ -584,17 +583,6 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </table>
 
         <p>特別なマークアップの必要はありません。</p>
-      </section>
-
-      <section id="bordered-image">
-        <h1>枠線付き画像</h1>
-
-        <figure>
-          <img class="bordered" alt="Placeholder Image" height="540" src="https://unsplash.it/960/540/" width="960">
-        </figure>
-
-        <pre><code class="language-html">&lt;img <mark>class=&quot;bordered&quot;</mark> alt=&quot;...&quot; src=&quot;...&quot;&gt;
-</code></pre>
       </section>
 
       <section id="drop-image">
