Update pre style description

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -334,7 +334,7 @@
         <section>
           <h1>整形済みテキスト</h1>
 
-          <p>主にコードの表示やコマンドラインでの操作例に使用しています。主に英文になることから、フォントサイズを1段階、行間も<code>1.3</code>前後に落としてあります。</p>
+          <p>主にコードの表示やコマンドラインでの操作例に使用しています。主に英文になることから、ブラウザーの慣習に従ってフォントサイズを1段階落としてあります。また、本文とのバランスをとるため、<code>pre</code>要素の3行が本文の2行に相当するようにしてあります。</p>
 
           <pre><samp>$ <kbd>mkdir example</kbd>
 $ <kbd>cd example/</kbd>
