--- a/src/css/test.html
+++ b/src/css/test.html
@@ -60,7 +60,7 @@
           <a href="../img/about/how-i-markup-and-style-this-website.svg"><img alt="How I Markup &amp; Style This Website" height="1440" src="../img/about/how-i-markup-and-style-this-website.svg" width="2560"></a>
         </figure>
 
-        <p>Hail2u.netで使われているマークアップやスタイルの解説兼プレビューのページです。マークアップはHTMLのソースを、スタイルについては<a href="style.css">このページで参照されている非圧縮のCSSファイル</a>を参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
+        <p>Hail2u.netで使われているマークアップやスタイルの解説兼プレビューのページです。マークアップはHTMLのソースを、スタイルについてはこのページで参照されている非圧縮のCSSファイルを参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
 
         <section>
           <h1>デバッグ</h1>
