--- a/src/css/test.html
+++ b/src/css/test.html
@@ -108,13 +108,13 @@
           </li>
           <li>ウィジェット
             <ol>
-              <li><a href="#drop-image">画像の飛び出し</a></li>
-              <li><a href="#fill-block">幅いっぱい</a></li>
-              <li><a href="#flat-list">フラット・リスト</a></li>
-              <li><a href="#float-image">浮かんだ画像</a></li>
+              <li><a href="#drop-image">画像のはみ出し</a></li>
+              <li><a href="#fill-image">幅いっぱいの画像</a></li>
+              <li><a href="#flat-list">フラットなリスト</a></li>
+              <li><a href="#float-image">画像の右寄せ</a></li>
               <li><a href="#hanged-heading">見出しの飛び出し</a></li>
-              <li><a href="#posts-list">記事リスト</a></li>
-              <li><a href="#seealso-link">他を参照</a></li>
+              <li><a href="#posts-list">投稿のリスト</a></li>
+              <li><a href="#seealso-block">他を参照するリンク</a></li>
               <li><a href="#sidenote-block">傍注</a></li>
               <li><a href="#topic-block">話題の記事</a></li>
             </ol>
@@ -605,8 +605,8 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <p>Cras ipsum nisi, vestibulum a aliquam in, aliquet ac augue. Ut sit amet nisl sit amet leo ullamcorper imperdiet id non orci. Etiam at auctor quam, a volutpat nulla. Aliquam posuere magna sit amet auctor vulputate. Vivamus at nisi vel magna bibendum egestas. Vivamus imperdiet sem at ipsum tempor mattis a nec justo. Sed sit amet lectus in libero euismod rhoncus et id velit. Vestibulum at rutrum urna, in dignissim mi. Aenean in lectus id ipsum ornare molestie. Mauris sit amet ipsum pharetra, luctus diam sodales, vehicula ipsum. Nullam tincidunt porttitor ante at pretium. Phasellus varius, metus in mollis commodo, augue lorem aliquet magna, condimentum condimentum ante tellus eleifend odio. Nullam fermentum porta lacus quis placerat.</p>
       </section>
 
-      <section id="fill-block">
-        <h1>幅いっぱい</h1>
+      <section id="fill-image">
+        <h1>幅いっぱいの画像</h1>
 
         <figure class="fill">
           <img alt="Placeholder Image" height="810" src="https://unsplash.it/1440/810/" width="1440">
@@ -623,7 +623,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
       </section>
 
       <section id="flat-list">
-        <h1>フラット・リスト</h1>
+        <h1>フラットなリスト</h1>
 
         <ul class="flat">
           <li><a href="#">Lorem</a></li>
@@ -641,7 +641,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
       </section>
 
       <section id="float-image">
-        <h1>浮かんだ画像</h1>
+        <h1>画像の右寄せ</h1>
 
         <figure class="float">
           <img alt="Placeholder Image" height="180" src="https://unsplash.it/320/180/" width="320">
@@ -665,7 +665,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
       </section>
 
       <section id="posts-list">
-        <h1>記事リスト</h1>
+        <h1>投稿のリスト</h1>
 
         <ol class="posts">
           <li>
@@ -699,7 +699,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 </code></pre>
       </section>
 
-      <section id="seealso-link">
+      <section id="seealso-block">
         <h1>他を参照</h1>
 
         <p class="seealso">See also: <a href="#">Lorem ipsum</a></p>
