Remove clearfix class

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -279,7 +279,7 @@
         <section>
           <h1>セクション構成物</h1>
 
-          <p>セクションを作成する、<code>section</code>、<code>nav</code>、<code>article</code>と<code>aside</code>要素では、特に何もスタイルを指定していません。ただし予期せぬ回り込み等を回避するためにclearfixだけは指定することがあります。</p>
+          <p>セクションを作成する、<code>section</code>、<code>nav</code>、<code>article</code>と<code>aside</code>要素では、特に何もスタイルを指定していません。</p>
         </section>
 
         <section>
