Give up page specific CSS

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -12,8 +12,8 @@
     <link href="https://hail2u.net/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
     <link href="https://hail2u.net/feed" rel="alternate" type="application/rss+xml">
 
-    <link href="common.css" media="not print" rel="stylesheet">
-    <link href="style-guide.css" media="not print" rel="stylesheet">
+    <link href="main.css" media="not print" rel="stylesheet">
+    <link href="debug.css" media="not print" rel="stylesheet">
     <link href="print.css" media="only print" rel="stylesheet">
 
     <script async src="../../node_modules/unutm/build/unutm.js"></script>
