--- a/src/css/test.html
+++ b/src/css/test.html
@@ -22,6 +22,7 @@
     <script defer src="../js/toggle-eyecatch.js"></script>
     <script defer src="../js/toggle-home.js"></script>
     <script defer src="../js/toggle-outline.js"></script>
+    <script defer src="../js/wrapfix.js"></script>
 
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@hail2u_" name="twitter:site">
