Limit Float height

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -648,7 +648,15 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           <img alt="Placeholder Image" height="180" src="https://unsplash.it/320/180/" width="320">
         </figure>
 
-        <p>Nam sapien lacus, suscipit in convallis at, eleifend non orci. Fusce nunc dolor, dictum in mi ut, tempus rutrum metus. Vivamus porttitor ac diam sit amet vulputate. Vestibulum pellentesque lacus varius ligula scelerisque tincidunt. Quisque aliquam orci sed sem consectetur, eu pharetra nisl tempus. Donec in eros consequat, porta nisi vel, porta urna. Aliquam in nunc venenatis, ultricies ipsum ultricies, aliquet urna. Etiam varius odio ac quam interdum, ac pretium mauris ornare. Sed vitae ligula sed elit suscipit viverra ut vel est. Integer lobortis mi sit amet neque aliquet, eu porttitor magna semper. Nunc ac diam a dui iaculis consequat. Maecenas ac faucibus mauris. Duis eu arcu at felis vulputate lacinia vitae ac lacus. Aenean volutpat risus vitae porttitor posuere.</p>
+        <p>Nam sapien lacus, suscipit in convallis at, eleifend non orci. Fusce nunc dolor, dictum in mi ut, tempus rutrum metus. Vivamus porttitor ac diam sit amet vulputate. Vestibulum pellentesque lacus varius ligula scelerisque tincidunt. Quisque aliquam orci sed sem consectetur, eu pharetra nisl tempus. Donec in eros consequat, porta nisi vel, porta urna. Aliquam in nunc venenatis, ultricies ipsum ultricies, aliquet urna. Etiam varius odio ac quam interdum, ac pretium mauris ornare.</p>
+
+        <p>画像を右寄せした場合、幅はおよそ1/3ほどまで、高さは最大12行分までにそれぞれ制限されます。</p>
+
+        <figure class="float">
+          <img alt="Placeholder Image" height="320" src="https://unsplash.it/180/320/" width="180">
+        </figure>
+
+        <p>Suspendisse cursus massa ut erat varius, a tempus mi venenatis. Vivamus molestie nibh nec rutrum finibus. Duis egestas hendrerit ultricies. In rutrum lacus at mattis blandit. Etiam sodales est quam, sed venenatis urna sodales feugiat. Curabitur sit amet fermentum metus. Suspendisse luctus, sapien nec pharetra commodo, quam erat rutrum magna, vitae dapibus purus metus vehicula arcu. Mauris faucibus commodo suscipit. Quisque in diam eu odio accumsan sodales sit amet in velit. Vestibulum tellus enim, eleifend sit amet commodo id, aliquam et libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ipsum arcu, gravida vitae rutrum nec, lacinia eget lorem. Duis ultrices est odio, vitae dictum lorem rhoncus at. Vivamus vehicula consectetur quam vel placerat. Nunc orci eros, sagittis ut velit lacinia, fringilla blandit libero. In volutpat ex a sapien pulvinar pharetra. Integer turpis magna, accumsan sit amet euismod vitae, lacinia pretium orci. Ut in ipsum purus. Duis ullamcorper sagittis risus sed mollis.</p>
 
         <pre><code class="language-html">&lt;figure <mark>class=&quot;float&quot;</mark>&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
