Revert "Use SVG for Logo"
This reverts commit 4860872cd681a48ddac7d8d8eaa678740917687b.

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -37,7 +37,7 @@
 
   <body>
     <header class="global-header" role="banner">
-      <h1 class="logo"><a href="https://hail2u.net/"><img alt="Hail2u.net" src="../img/logo.svg"></a></h1>
+      <h1 class="logo"><a href="https://hail2u.net/">Hail2u.net</a></h1>
 
       <nav class="site-navigation">
         <ul>
