--- a/src/css/test.html
+++ b/src/css/test.html
@@ -16,6 +16,7 @@
     <link href="debug.css" media="not print" rel="stylesheet">
     <link href="print.css" media="only print" rel="stylesheet">
 
+    <script async src="../../node_modules/@hail2u/abbread/dist/abbread.js"></script>
     <script async src="../../node_modules/unutm/build/unutm.js"></script>
     <script defer src="../js/ellipsis-title.js"></script>
     <script defer src="../js/toggle-column.js"></script>
