Give up to use Noto Sans Japanese

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -12,7 +12,6 @@
     <link href="https://hail2u.net/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
     <link href="https://hail2u.net/feed" rel="alternate" type="application/rss+xml">
 
-    <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" media="not print" rel="stylesheet">
     <link href="main.css" media="not print" rel="stylesheet">
     <link href="debug.css" media="not print" rel="stylesheet">
     <link href="print.css" media="only print" rel="stylesheet">
@@ -199,7 +198,7 @@
         <table>
           <tr>
             <th rowspan="3">本文</th>
-            <td class="font-family-body"><a href="https://www.google.com/get/noto/">Noto Sans</a> Japanese</td>
+            <td class="font-family-body">San FranciscoまたはSegoe UI</td>
           </tr>
           <tr>
             <td class="font-family-body">The quick brown fox jumps over the lazy dog.</td>
