--- a/src/css/test.html
+++ b/src/css/test.html
@@ -17,8 +17,8 @@
     <link href="print.css" media="only print" rel="stylesheet">
 
     <script async src="../../node_modules/@hail2u/abbread/dist/abbread.js"></script>
+    <script defer src="../../node_modules/@hail2u/ellipsis-title/dist/ellipsis-title.js"></script>
     <script async src="../../node_modules/unutm/build/unutm.js"></script>
-    <script defer src="../js/ellipsis-title.js"></script>
     <script defer src="../js/toggle-column.js"></script>
     <script defer src="../js/toggle-eyecatch.js"></script>
     <script defer src="../js/toggle-home.js"></script>
