Use class for Subheading

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -64,7 +64,7 @@
         <p>Hail2u.netで使われているマークアップやスタイルの解説兼プレビューのページです。マークアップはHTMLのソースを、スタイルについてはこのページで参照されている非圧縮のCSSファイルを参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
 
         <section>
-          <h1>デバッグ</h1>
+          <h1 class="subheading">デバッグ</h1>
 
           <p>レイアウトの位置確認のために、空いているところをダブルクリックするとグリッドと要素のアウトラインをトグルすることができます。グリッドはCSSグラデーションを利用した簡単なもののため、描画領域の幅によっては数ピクセル程ずれることがあります。</p>
 
@@ -72,7 +72,7 @@
         </section>
 
         <section>
-          <h1>印刷向けスタイルシート</h1>
+          <h1 class="subheading">印刷向けスタイルシート</h1>
 
           <p>必要のないものを隠し、適切な位置で改行されるように調節しています。</p>
         </section>
@@ -121,7 +121,7 @@
         <p>以下はマークアップやスタイル、スクリプトにおけるコーディング規約もどきです。</p>
 
         <section>
-          <h1>マークアップ</h1>
+          <h1 class="subheading">マークアップ</h1>
 
           <ul>
             <li><a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>のHTML文法を使ってUTF-8で書きます</li>
@@ -146,7 +146,7 @@
         </section>
 
         <section>
-          <h1>スタイル</h1>
+          <h1 class="subheading">スタイル</h1>
 
           <ul>
             <li><a href="https://sass-lang.com/">Sass</a>のSCSS記法を使ってUTF-8で書きます</li>
@@ -174,7 +174,7 @@
         </section>
 
         <section>
-          <h1>スクリプト</h1>
+          <h1 class="subheading">スクリプト</h1>
 
           <ul>
             <li>JavaScriptをUTF-8で書きます</li>
@@ -262,19 +262,19 @@
         <p>HTML5が定義するところのセクションを構成する要素についてです。</p>
 
         <section>
-          <h1>body</h1>
+          <h1 class="subheading">body</h1>
 
           <p>文字はブラウザーの初期設定のまま（通常は<code>16px</code>）で表示されます。行間はx-heightという概念のない日本語がメインなので少し多めに<code>1.7</code>としています。狭い画面でコンテンツに適切な幅が確保できない場合は<code>1.7 * 0.9 = 1.53</code>へ落とし、おさまり具合を調節しています。</p>
         </section>
 
         <section>
-          <h1>セクション構成物</h1>
+          <h1 class="subheading">セクション構成物</h1>
 
           <p>セクションを作成する、<code>section</code>、<code>nav</code>、<code>article</code>と<code>aside</code>要素では、特に何もスタイルを指定していません。</p>
         </section>
 
         <section>
-          <h1>見出し</h1>
+          <h1 class="subheading">見出し</h1>
 
           <p>セクションの見出しは<code>h1</code>要素でマークアップされます。</p>
 
@@ -283,7 +283,7 @@
         </section>
 
         <section>
-          <h1>小見出し</h1>
+          <h1 class="subheading">小見出し</h1>
 
           <p>セクション内の小見出しでも<code>h1</code>要素を使います。必ず<code>section</code>要素を組み合わせることで、CSSでスタイリングできるようにしています。</p>
 
@@ -300,7 +300,7 @@
         <p>コンテンツで使われる基本的な要素についてです。</p>
 
         <section>
-          <h1>段落</h1>
+          <h1 class="subheading">段落</h1>
 
           <p>様々な所で使用されるので、他とバッティングしないように相殺可能なマージン以外のスタイルは指定していません。</p>
 
@@ -309,7 +309,7 @@
         </section>
 
         <section>
-          <h1>水平線</h1>
+          <h1 class="subheading">水平線</h1>
 
           <p>主に暗黙のセクションの区切りが挿入される所に恣意的に使用しています。線の代わりに表示されるアステリズムはSVGです。</p>
 
@@ -320,7 +320,7 @@
         </section>
 
         <section>
-          <h1>整形済みテキスト</h1>
+          <h1 class="subheading">整形済みテキスト</h1>
 
           <p>主にコードの表示やコマンドラインでの操作例に使用しています。主に英文になることから、ブラウザーの慣習に従ってフォントサイズを1段階落としてあります。また、本文とのバランスをとるため、<code>pre</code>要素の3行が本文の2行に相当するようにしてあります。</p>
 
@@ -347,7 +347,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </section>
 
         <section>
-          <h1>引用</h1>
+          <h1 class="subheading">引用</h1>
 
           <p>内部で様々なスタイルが使用されるので、ブロックの左端に縦線を引く以外のスタイルは指定しません。字体に斜体を採用すべきところですが、<a href="https://en.wikipedia.org/wiki/Meiryo">メイリオ</a>が和文部分に斜体を持っていないのでそれを考慮して無指定にしています。マークアップは通常、全体を<code>figure</code>要素で括り、引用元の表記は<code>figcaption</code>と<code>cite</code>要素を組み合わせて行います。</p>
 
@@ -374,7 +374,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </section>
 
         <section>
-          <h1>序列付きリストと序列なしリスト</h1>
+          <h1 class="subheading">序列付きリストと序列なしリスト</h1>
 
           <p>双方共にデフォルトとあまり違わない形になるようにスタイルは最小限にとどめています。序列付きリストではアラビア数字をそのマークに使用します。</p>
 
@@ -424,7 +424,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </section>
 
         <section>
-          <h1>関連リスト</h1>
+          <h1 class="subheading">関連リスト</h1>
 
           <p>内部、特に<code>dd</code>要素内で様々な要素が使われたり使われなかったりすることから、スタイルは最小限にとどめています。</p>
 
@@ -452,7 +452,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </section>
 
         <section>
-          <h1>図</h1>
+          <h1 class="subheading">図</h1>
 
           <p>通常は<code>figure</code>要素を使っています。既に<code>blockquote</code>要素で使われているように内容は画像とは限らないので、強いスタイルは指定していません。</p>
 
