--- a/src/css/test.html
+++ b/src/css/test.html
@@ -42,7 +42,7 @@
 
       <nav class="site-navigation">
         <ul>
-          <li><a href="https://hail2u.net/documents/">書き物</a></li>
+          <li><a href="https://hail2u.net/documents/">特集</a></li>
           <li><a href="https://hail2u.net/blog/">ウェブログ</a></li>
           <li><a href="https://hail2u.net/about/"><mark>いろいろ</mark></a></li>
         </ul>
