Fix Byline label

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -752,7 +752,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
     </aside>
 
     <footer class="global-footer" role="contentinfo">
-      <p id="author" class="byline"><a href="https://kyonagashima.com/" rel="author">ながしまきょう</a></p>
+      <p id="author" class="byline">作った人: <a href="https://kyonagashima.com/" rel="author">ながしまきょう</a></p>
 
       <p class="footlinks"><a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a> • <a href="/feed" rel="alternate">RSS</a></p>
     </footer>
