Optimize placeholder texts

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -431,17 +431,17 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           <dl>
             <dt>Proin gravida sodales lectus, sed placerat urna posuere sit amet.</dt>
 
-            <dd>Nam semper blandit mi, sed pulvinar tellus posuere eu. Phasellus vitae ipsum lacus. Fusce viverra odio in augue vestibulum et fermentum nisi consectetur. Aenean a velit enim. Duis lacinia velit a arcu ornare at molestie mi iaculis.</dd>
+            <dd>Nam semper blandit mi, sed pulvinar tellus posuere eu. Phasellus vitae ipsum lacus. Fusce viverra odio in augue vestibulum et fermentum nisi consectetur. Aenean a velit enim.</dd>
 
             <dt>Mauris sed urna a odio condimentum elementum.</dt>
 
-            <dd>Vivamus congue laoreet augue, quis euismod urna placerat a. Duis nulla lacus, laoreet commodo consequat vel, convallis at risus. Vestibulum porttitor, leo eu ullamcorper lacinia, felis ipsum ultrices libero, vitae pretium sem nisi in dui. Curabitur in aliquam elit. Aliquam tortor nisi, tristique id congue in, scelerisque in massa.</dd>
+            <dd>Vivamus congue laoreet augue, quis euismod urna placerat a. Duis nulla lacus, laoreet commodo consequat vel, convallis at risus.</dd>
 
-            <dd>Etiam congue porta ligula, quis interdum justo tincidunt ac. Quisque ac gravida arcu. Curabitur blandit tortor quis velit porta quis euismod arcu posuere. Suspendisse potenti. Donec ac arcu vitae libero porta dictum sed in dolor.</dd>
+            <dd>Etiam congue porta ligula, quis interdum justo tincidunt ac. Quisque ac gravida arcu. Curabitur blandit tortor quis velit porta quis euismod arcu posuere. Suspendisse potenti.</dd>
 
             <dt>Quisque at sem at justo eleifend aliquet ac quis quam.</dt>
 
-            <dd>Praesent interdum ullamcorper volutpat. Maecenas nec lectus risus. Mauris sit amet orci metus. Duis tincidunt, tortor in laoreet rutrum, libero tellus ornare nibh, a accumsan quam massa vel lorem. Sed ultrices molestie vestibulum.</dd>
+            <dd>Praesent interdum ullamcorper volutpat. Maecenas nec lectus risus. Mauris sit amet orci metus. Duis tincidunt, tortor in laoreet rutrum, libero tellus ornare nibh, a accumsan quam massa vel lorem.</dd>
           </dl>
 
           <pre><code class="language-html">&lt;dl&gt;
@@ -578,7 +578,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
         <p>Vestibulum ultricies urna risus. Duis vitae fringilla velit. Etiam vestibulum, tortor nec vehicula mattis, magna ligula scelerisque risus, sed viverra orci ligula nec purus. Vivamus eleifend, magna id fermentum malesuada, orci lorem tincidunt ipsum, ut elementum purus mauris at est.</p>
 
-        <p>Mauris sagittis tellus magna, sit amet sodales sem bibendum sit amet. Nam pharetra vulputate leo vitae faucibus. Praesent ac semper augue, ut dignissim dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean fermentum dui sit amet leo auctor suscipit. Nulla nulla lacus, elementum convallis aliquet eget, tincidunt quis diam. Donec id dictum justo, at blandit ex. Duis fringilla fringilla odio. Cras ut ultricies enim. Donec pharetra leo ut aliquet volutpat. Nullam dapibus augue dolor, sit amet congue nulla euismod ac. Mauris in eros et elit accumsan pulvinar.</p>
+        <p>Mauris sagittis tellus magna, sit amet sodales sem bibendum sit amet. Nam pharetra vulputate leo vitae faucibus. Praesent ac semper augue, ut dignissim dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean fermentum dui sit amet leo auctor suscipit. Nulla nulla lacus, elementum convallis aliquet eget, tincidunt quis diam. Donec id dictum justo, at blandit ex.</p>
 
         <pre><code class="language-html">&lt;figure <mark>class=&quot;drop&quot;</mark>&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
@@ -591,7 +591,9 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           <img alt="Placeholder Image" height="90" src="https://unsplash.it/160/90/" width="160">
         </figure>
 
-        <p>Cras ipsum nisi, vestibulum a aliquam in, aliquet ac augue. Ut sit amet nisl sit amet leo ullamcorper imperdiet id non orci. Etiam at auctor quam, a volutpat nulla. Aliquam posuere magna sit amet auctor vulputate. Vivamus at nisi vel magna bibendum egestas. Vivamus imperdiet sem at ipsum tempor mattis a nec justo. Sed sit amet lectus in libero euismod rhoncus et id velit. Vestibulum at rutrum urna, in dignissim mi. Aenean in lectus id ipsum ornare molestie. Mauris sit amet ipsum pharetra, luctus diam sodales, vehicula ipsum. Nullam tincidunt porttitor ante at pretium. Phasellus varius, metus in mollis commodo, augue lorem aliquet magna, condimentum condimentum ante tellus eleifend odio. Nullam fermentum porta lacus quis placerat.</p>
+        <p>Cras ipsum nisi, vestibulum a aliquam in, aliquet ac augue. Ut sit amet nisl sit amet leo ullamcorper imperdiet id non orci. Etiam at auctor quam, a volutpat nulla. Aliquam posuere magna sit amet auctor vulputate. Vivamus at nisi vel magna bibendum egestas. Vivamus imperdiet sem at ipsum tempor mattis a nec justo. Sed sit amet lectus in libero euismod rhoncus et id velit. Vestibulum at rutrum urna, in dignissim mi.</p>
+
+        <p>Donec ipsum nibh, pellentesque vitae nunc a, finibus eleifend metus. Etiam a nulla vitae nulla finibus efficitur. Mauris eget diam nec ex sodales mattis. Proin sed orci vitae nulla tempus porttitor et vitae erat. Mauris varius justo vel eros porta, eu cursus mi convallis. Quisque cursus neque id dui facilisis, sed molestie velit eleifend. Duis pharetra nisi felis.</p>
       </section>
 
       <section id="fill-image" class="section">
@@ -602,7 +604,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           <figcaption>Random Placeholder Image</figcaption>
         </figure>
 
-        <p>Ut at sapien id tortor mattis pharetra in nec felis. In dapibus gravida eleifend. Vestibulum viverra vulputate molestie. Nullam auctor hendrerit rhoncus. Nulla rutrum, arcu eget hendrerit dignissim.</p>
+        <p>Ut at sapien id tortor mattis pharetra in nec felis. In dapibus gravida eleifend. Vestibulum viverra vulputate molestie. Nullam auctor hendrerit rhoncus. Nulla rutrum, arcu eget hendrerit dignissim. Donec scelerisque lacus eu dui posuere gravida. Nulla venenatis bibendum risus et fringilla. Vivamus sed arcu a lacus iaculis efficitur. Curabitur pellentesque pellentesque tempus. Maecenas consectetur commodo leo ut sagittis.</p>
 
         <pre><code class="language-html">&lt;figure <mark>class=&quot;fill&quot;</mark>&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
@@ -636,7 +638,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           <img alt="Placeholder Image" height="180" src="https://unsplash.it/320/180/" width="320">
         </figure>
 
-        <p>Nam sapien lacus, suscipit in convallis at, eleifend non orci. Fusce nunc dolor, dictum in mi ut, tempus rutrum metus. Vivamus porttitor ac diam sit amet vulputate. Vestibulum pellentesque lacus varius ligula scelerisque tincidunt. Quisque aliquam orci sed sem consectetur, eu pharetra nisl tempus. Donec in eros consequat, porta nisi vel, porta urna. Aliquam in nunc venenatis, ultricies ipsum ultricies, aliquet urna. Etiam varius odio ac quam interdum, ac pretium mauris ornare.</p>
+        <p>Nam sapien lacus, suscipit in convallis at, eleifend non orci. Fusce nunc dolor, dictum in mi ut, tempus rutrum metus. Vivamus porttitor ac diam sit amet vulputate. Vestibulum pellentesque lacus varius ligula scelerisque tincidunt. Quisque aliquam orci sed sem consectetur, eu pharetra nisl tempus. Donec in eros consequat, porta nisi vel, porta urna. Aliquam in nunc venenatis, ultricies ipsum ultricies, aliquet urna.</p>
 
         <p>画像を右寄せした場合、幅はおよそ1/3ほどまで、高さは最大12行分までにそれぞれ制限されます。</p>
 
@@ -644,7 +646,9 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           <img alt="Placeholder Image" height="320" src="https://unsplash.it/180/320/" width="180">
         </figure>
 
-        <p>Suspendisse cursus massa ut erat varius, a tempus mi venenatis. Vivamus molestie nibh nec rutrum finibus. Duis egestas hendrerit ultricies. In rutrum lacus at mattis blandit. Etiam sodales est quam, sed venenatis urna sodales feugiat. Curabitur sit amet fermentum metus. Suspendisse luctus, sapien nec pharetra commodo, quam erat rutrum magna, vitae dapibus purus metus vehicula arcu. Mauris faucibus commodo suscipit. Quisque in diam eu odio accumsan sodales sit amet in velit. Vestibulum tellus enim, eleifend sit amet commodo id, aliquam et libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ipsum arcu, gravida vitae rutrum nec, lacinia eget lorem. Duis ultrices est odio, vitae dictum lorem rhoncus at. Vivamus vehicula consectetur quam vel placerat. Nunc orci eros, sagittis ut velit lacinia, fringilla blandit libero. In volutpat ex a sapien pulvinar pharetra. Integer turpis magna, accumsan sit amet euismod vitae, lacinia pretium orci. Ut in ipsum purus. Duis ullamcorper sagittis risus sed mollis.</p>
+        <p>Suspendisse cursus massa ut erat varius, a tempus mi venenatis. Vivamus molestie nibh nec rutrum finibus. Duis egestas hendrerit ultricies. In rutrum lacus at mattis blandit. Etiam sodales est quam, sed venenatis urna sodales feugiat. Curabitur sit amet fermentum metus. Suspendisse luctus, sapien nec pharetra commodo, quam erat rutrum magna, vitae dapibus purus metus vehicula arcu. Mauris faucibus commodo suscipit.</p>
+
+        <p>Quisque in diam eu odio accumsan sodales sit amet in velit. Vestibulum tellus enim, eleifend sit amet commodo id, aliquam et libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ipsum arcu, gravida vitae rutrum nec, lacinia eget lorem. Duis ultrices est odio, vitae dictum lorem rhoncus at. Vivamus vehicula consectetur quam vel placerat. Nunc orci eros, sagittis ut velit lacinia, fringilla blandit libero.</p>
 
         <pre><code class="language-html">&lt;figure <mark>class=&quot;float&quot;</mark>&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
@@ -655,7 +659,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
       <section id="hanged-heading" class="section">
         <h1 class="hanged">見出しの飛び出し</h1>
 
-        <p>Curabitur ut ante consectetur, facilisis ex sed, dapibus lectus. Duis mollis sodales lacinia. Duis eget auctor lectus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin sit amet laoreet leo, ut rutrum nibh. Mauris ut pulvinar justo, non posuere nibh. Aenean at quam ante. Suspendisse sit amet tristique nisl. Sed nec facilisis diam. Ut sapien libero, tempus in consectetur condimentum, aliquet vitae velit. Praesent consequat fermentum neque, vitae fringilla nisi interdum vulputate. Quisque pellentesque leo eu lectus gravida, eu eleifend augue eleifend. Curabitur sed finibus lorem. Suspendisse potenti. Morbi ornare eros eu rhoncus aliquet.</p>
+        <p>Curabitur ut ante consectetur, facilisis ex sed, dapibus lectus. Duis mollis sodales lacinia. Duis eget auctor lectus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin sit amet laoreet leo, ut rutrum nibh. Mauris ut pulvinar justo, non posuere nibh. Aenean at quam ante. Suspendisse sit amet tristique nisl.</p>
 
         <pre><code class="language-html">&lt;h1 <mark>class=&quot;hanged&quot;</mark>&gt;...&lt;/h1&gt;
 </code></pre>
@@ -707,7 +711,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           <p>In vitae pretium risus. Vivamus ac ligula non ligula rhoncus sagittis. Fusce velit sem, congue in vestibulum sed, vestibulum sed nibh.</p>
         </aside>
 
-        <p>Proin et odio eros. Vivamus gravida pulvinar aliquet. Quisque convallis sodales mauris sed bibendum. Vestibulum eros sem, pharetra eleifend blandit nec, elementum convallis neque. Aenean pulvinar aliquam augue, blandit pulvinar sapien rhoncus ac. Donec velit diam, vulputate ut elementum sit amet, interdum quis est. Vivamus sed justo mi, quis molestie nulla. In hac habitasse platea dictumst. Cras tempus tristique tellus vel imperdiet. Cras a elit eget elit tincidunt hendrerit. Suspendisse potenti. Nunc porttitor ultricies porttitor. Ut eget pharetra dolor.</p>
+        <p>Proin et odio eros. Vivamus gravida pulvinar aliquet. Quisque convallis sodales mauris sed bibendum. Vestibulum eros sem, pharetra eleifend blandit nec, elementum convallis neque. Aenean pulvinar aliquam augue, blandit pulvinar sapien rhoncus ac. Donec velit diam, vulputate ut elementum sit amet, interdum quis est. Vivamus sed justo mi, quis molestie nulla. In hac habitasse platea dictumst.</p>
 
         <pre><code class="language-html">&lt;aside <mark>class=&quot;sidenote&quot;</mark>&gt;
   &lt;p&gt;...&lt;/p&gt;
