--- a/src/css/test.html
+++ b/src/css/test.html
@@ -567,23 +567,6 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <p>特別なマークアップの必要はありません。</p>
       </section>
 
-      <section id="drop-image" class="section">
-        <h1>画像の飛び出し</h1>
-
-        <figure class="drop">
-          <img alt="Placeholder Image" height="360" src="https://unsplash.it/360/360/" width="360">
-        </figure>
-
-        <p>Vestibulum ultricies urna risus. Duis vitae fringilla velit. Etiam vestibulum, tortor nec vehicula mattis, magna ligula scelerisque risus, sed viverra orci ligula nec purus. Vivamus eleifend, magna id fermentum malesuada, orci lorem tincidunt ipsum, ut elementum purus mauris at est.</p>
-
-        <p>Mauris sagittis tellus magna, sit amet sodales sem bibendum sit amet. Nam pharetra vulputate leo vitae faucibus. Praesent ac semper augue, ut dignissim dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean fermentum dui sit amet leo auctor suscipit. Nulla nulla lacus, elementum convallis aliquet eget, tincidunt quis diam. Donec id dictum justo, at blandit ex.</p>
-
-        <pre><code class="language-html">&lt;figure <mark>class=&quot;drop&quot;</mark>&gt;
-  &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
-&lt;/figure&gt;
-</code></pre>
-      </section>
-
       <section id="fill-image" class="section">
         <h1>幅いっぱいの画像</h1>
 
@@ -639,6 +622,23 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <p>Quisque in diam eu odio accumsan sodales sit amet in velit. Vestibulum tellus enim, eleifend sit amet commodo id, aliquam et libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ipsum arcu, gravida vitae rutrum nec, lacinia eget lorem. Duis ultrices est odio, vitae dictum lorem rhoncus at. Vivamus vehicula consectetur quam vel placerat. Nunc orci eros, sagittis ut velit lacinia, fringilla blandit libero.</p>
 
         <pre><code class="language-html">&lt;figure <mark>class=&quot;float&quot;</mark>&gt;
+  &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
+&lt;/figure&gt;
+</code></pre>
+      </section>
+
+      <section id="hang-image" class="section">
+        <h1>画像の飛び出し</h1>
+
+        <figure class="hang">
+          <img alt="Placeholder Image" height="360" src="https://unsplash.it/360/360/" width="360">
+        </figure>
+
+        <p>Vestibulum ultricies urna risus. Duis vitae fringilla velit. Etiam vestibulum, tortor nec vehicula mattis, magna ligula scelerisque risus, sed viverra orci ligula nec purus. Vivamus eleifend, magna id fermentum malesuada, orci lorem tincidunt ipsum, ut elementum purus mauris at est.</p>
+
+        <p>Mauris sagittis tellus magna, sit amet sodales sem bibendum sit amet. Nam pharetra vulputate leo vitae faucibus. Praesent ac semper augue, ut dignissim dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean fermentum dui sit amet leo auctor suscipit. Nulla nulla lacus, elementum convallis aliquet eget, tincidunt quis diam. Donec id dictum justo, at blandit ex.</p>
+
+        <pre><code class="language-html">&lt;figure <mark>class=&quot;drop&quot;</mark>&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
 &lt;/figure&gt;
 </code></pre>
