Fix widget links

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -100,13 +100,13 @@
           </li>
           <li>ウィジェット
             <ol>
-              <li><a href="#drop-image">画像のはみ出し</a></li>
-              <li><a href="#fill-image">幅いっぱいの画像</a></li>
-              <li><a href="#flat-list">フラットなリスト</a></li>
-              <li><a href="#float-image">画像の右寄せ</a></li>
-              <li><a href="#posts-list">投稿のリスト</a></li>
-              <li><a href="#seealso-block">他を参照するリンク</a></li>
-              <li><a href="#sidenote-block">傍注</a></li>
+              <li><a href="#fill">幅いっぱい</a></li>
+              <li><a href="#flat">横並び</a></li>
+              <li><a href="#float">右寄せ</a></li>
+              <li><a href="#hang">はみ出し</a></li>
+              <li><a href="#posts">投稿一覧</a></li>
+              <li><a href="#seealso">参照</a></li>
+              <li><a href="#sidenote">傍注</a></li>
             </ol>
           </li>
         </ol>
@@ -566,8 +566,8 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <p>特別なマークアップの必要はありません。</p>
       </section>
 
-      <section id="fill-image" class="section">
-        <h1>幅いっぱいの画像</h1>
+      <section id="fill" class="section">
+        <h1>幅いっぱい</h1>
 
         <figure class="fill">
           <img alt="Placeholder Image" height="810" src="https://unsplash.it/1440/810/" width="1440">
@@ -583,7 +583,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 </code></pre>
       </section>
 
-      <section id="flat-list" class="section">
+      <section id="flat" class="section">
         <h1>フラットなリスト</h1>
 
         <ul class="flat">
@@ -601,8 +601,8 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 </code></pre>
       </section>
 
-      <section id="float-image" class="section">
-        <h1>画像の右寄せ</h1>
+      <section id="float" class="section">
+        <h1>右寄せ</h1>
 
         <figure class="float">
           <img alt="Placeholder Image" height="180" src="https://unsplash.it/320/180/" width="320">
@@ -626,8 +626,8 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 </code></pre>
       </section>
 
-      <section id="hang-image" class="section">
-        <h1>画像の飛び出し</h1>
+      <section id="hang" class="section">
+        <h1>飛び出し</h1>
 
         <figure class="hang">
           <img alt="Placeholder Image" height="360" src="https://unsplash.it/360/360/" width="360">
@@ -641,10 +641,11 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
 &lt;/figure&gt;
 </code></pre>
+</code></pre>
       </section>
 
-      <section id="posts-list" class="section">
-        <h1>投稿のリスト</h1>
+      <section id="posts" class="section">
+        <h1>投稿一覧</h1>
 
         <ol class="posts">
           <li>
@@ -673,8 +674,8 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 </code></pre>
       </section>
 
-      <section id="seealso-block" class="section">
-        <h1>他を参照</h1>
+      <section id="seealso" class="section">
+        <h1>参照</h1>
 
         <p class="seealso">See also: <a href="#">Lorem ipsum</a></p>
 
@@ -682,9 +683,8 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 </code></pre>
       </section>
 
-      <section id="sidenote-block" class="section">
+      <section id="sidenote" class="section">
         <h1>傍注</h1>
-
         <aside class="sidenote">
           <p>In vitae pretium risus. Vivamus ac ligula non ligula rhoncus sagittis. Fusce velit sem, congue in vestibulum sed, vestibulum sed nibh.</p>
         </aside>
@@ -695,6 +695,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
   &lt;p&gt;...&lt;/p&gt;
 &lt;/aside&gt;
 </code></pre>
+
       </section>
     </main>
 
